# scitex-session

./: CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  scitex-session-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/clew/: db.sqlite
.scitex/dev/: config.yaml
docs/PROPOSALS/: run-cwd-path-injection.md
docs/sphinx/: conf.py  index.rst
examples/: quickstart.py
src/scitex_session/: README.md  __init__.py  __main__.py  _decorator.py  _hooks.py  _manager.py  _mcp_server.py  archive.py  template.py
src/scitex_session/_decorator/: __init__.py  _cli.py  _decorator.py  _run.py
src/scitex_session/_lifecycle/: __init__.py  _close.py  _config.py  _matplotlib.py  _start.py  _utils.py
src/scitex_session/_lifecycle/_archive/: __init__.py  _bulk.py  _core.py  _single.py  _speedup.py
src/scitex_session/_skills/scitex-session/: 02_quick-start.md  03_python-api.md  04_cli-reference.md  05_mcp-tools.md  SKILL.md
src/scitex_session/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_session/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_session/_sphinx_html/.doctrees/api/: scitex_session.doctree  scitex_session.template.doctree
src/scitex_session/_sphinx_html/_modules/: index.html
src/scitex_session/_sphinx_html/_modules/scitex_session/: _decorator.html  _manager.html  template.html
src/scitex_session/_sphinx_html/_modules/scitex_session/_decorator/: _decorator.html  _run.html
src/scitex_session/_sphinx_html/_modules/scitex_session/_lifecycle/: _close.html  _start.html
src/scitex_session/_sphinx_html/_modules/scitex_session/_lifecycle/_archive/: _bulk.html  _single.html
src/scitex_session/_sphinx_html/_sources/: api.rst.txt  index.rst.txt
src/scitex_session/_sphinx_html/_sources/api/: scitex_session.rst.txt  scitex_session.template.rst.txt
src/scitex_session/_sphinx_html/api/: scitex_session.html  scitex_session.template.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_autolayout_default.py  test_close_exit_status_message.py  test_cross_package_imports.py  test_examples.py  test_figrecipe_edge.py
tests/scitex_session/: test___init__.py  test__decorator.py  test__hooks.py  test__manager.py  test__mcp_server.py  test_archive.py  test_autolayout_default.py  test_close_exit_status_message.py  test_mcp_server.py  test_template.py
tests/scitex_session/_decorator/: test__decorator.py
tests/scitex_session/_lifecycle/: test__start_caller_walk.py  test__utils.py  test_default_archive_on_close.py
tests/scitex_session/_lifecycle/_archive/: __init__.py  test__bulk.py  test__speedup.py
