[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-session"
version = "0.1.3"
description = "@session decorator + lifecycle (auto-CLI, output dir tree, RandomStateManager) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "session", "experiment-tracking", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib",
    "scitex-dict>=0.1.0",
    "scitex-logging>=0.1.0",
    "scitex-repro>=0.1.0",
    "scitex-str>=0.1.0",
    "scitex-io>=0.2.0",
    "scitex",
]

[project.optional-dependencies]
dev = [
    "joblib",
    "flask",
    "figrecipe",
    "scitex",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-session[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-session"
Repository = "https://github.com/ywatanabe1989/scitex-session"
Documentation = "https://scitex-session.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_session = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-session = "scitex_session"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]
