[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-session"
version = "0.1.8"
description = "@session decorator + lifecycle (auto-CLI, output dir tree, RandomStateManager) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "session", "experiment-tracking", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib",
    "scitex-dict>=0.1.0",
    "scitex-logging>=0.1.0",
    "scitex-repro>=0.1.0",
    "scitex-str>=0.1.0",
    "scitex-io>=0.2.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
dev = [
    "joblib",
    "flask",
    "figrecipe",
    "pytest",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
    # tests/scitex_session/test__{manager,decorator,template}.py +
    # tests/scitex_session/_lifecycle/test__utils.py importorskip these
    "h5py",
    "zarr",
    "natsort",
    # tests/scitex_session/test_mcp_server.py uses importorskip so it
    # also stays green without this, but listing it here means
    # `pip install -e .[dev]` exercises the MCP surface in CI.
    "fastmcp>=2.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-session[dev,docs,mcp]",
]

[project.scripts]
# Argparse CLI for the archive helpers — see scitex_session/archive.py.
scitex-session-archive = "scitex_session.archive:main"
# Stdio MCP server — requires the `mcp` extra (fastmcp).
scitex-session-mcp = "scitex_session._mcp_server:main"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-session"
Repository = "https://github.com/ywatanabe1989/scitex-session"
Documentation = "https://scitex-session.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_session = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-session = "scitex_session"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_session"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]
