[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-session"
version = "0.2.1"
description = "@session decorator + lifecycle (auto-CLI, output dir tree, RandomStateManager) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "session", "experiment-tracking", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib",
    # The session injects ``plt`` as the scitex/figrecipe wrapper so that
    # decorated scripts can use the documented convenience API (e.g.
    # ``ax.set_xyt(...)``). Without scitex-plt installed, setup_matplotlib
    # silently fell back to plain pyplot whose Axes lacks ``set_xyt``,
    # breaking every figure-saving session (clew P4_figure regression).
    "scitex-plt>=0.24.0",
    "scitex-dict>=0.1.0",
    "scitex-logging>=0.1.0",
    "scitex-repro>=0.1.0",
    "scitex-str>=0.1.0",
    "scitex-io>=0.2.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
dev = [
    "joblib",
    "flask",
    "figrecipe",
    "pytest",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
    # tests/scitex_session/test__{manager,decorator,template}.py +
    # tests/scitex_session/_lifecycle/test__utils.py importorskip these
    "h5py",
    "zarr",
    "natsort",
    # tests/scitex_session/test_mcp_server.py uses importorskip so it
    # also stays green without this, but listing it here means
    # `pip install -e .[dev]` exercises the MCP surface in CI.
    "fastmcp>=2.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-session[dev,docs,mcp]",
]

[project.scripts]
# Argparse CLI for the archive helpers — see scitex_session/archive.py.
scitex-session-archive = "scitex_session.archive:main"
# Stdio MCP server — requires the `mcp` extra (fastmcp).
scitex-session-mcp = "scitex_session._mcp_server:main"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-session"
Repository = "https://github.com/ywatanabe1989/scitex-session"
Documentation = "https://scitex-session.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_session = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-session = "scitex_session"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]
# Test the in-tree source so a worktree/checkout always exercises its own
# code, taking precedence over any stale editable-install `.pth` that may
# point at a different checkout sharing this venv.
pythonpath = ["src"]

[tool.coverage.run]
parallel = true
source = ["scitex_session"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]

[tool.scitex_dev]
# scitex-session's public API is mostly decorators / context managers
# (`session`, `module`, `run`, `close`) and the `SessionManager` class —
# Python-only constructs with no sensible MCP-tool counterpart. The MCP
# server exposes only the agent-callable operations (finalize_session,
# archive_*/restore_*, skills_*). That legitimate API↔tool asymmetry is the
# documented §6 mcp-parity exemption case.
mcp_parity_exempt = true

dependencies = [
    "scitex-dev>=0.17.8",
    "click>=8.1",
]
